@@ -207,4 +207,10 @@ pub enum Event {
     /// @param data2 (int) contact_id
     #[strum(props(id = "2062"))]
     SecurejoinMemberAdded { chat_id: ChatId, contact_id: u32 },
+
+    /// This event is sent for each contact added to a chat.
+    /// @param data1 (int) chat_id
+    /// @param data2 (int) contact_id
+    #[strum(props(id = "2063"))]
+    MemberAdded { chat_id: ChatId, contact_id: u32 },
 }
